# arch_linux_repositoty_build_rs

./: Cargo.toml  README.md  build.rs
src/: cli.rs  lib.rs  main.rs
src/commands/: aur.rs  custom.rs  mod.rs  official.rs
