[package]
name = "arb"
authors = ["sakunia <sakunia@foxmail.com>"]
description = "Arch Linux Repository Building CLI"
readme = "README.md"
license = "MIT"
version = "0.1.8"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
console = "0.15.2"
dialoguer = "0.10.2"
flate2 = "1.0.25"
git2 = "0.15.0"
once_cell = "1.16.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
subprocess = "0.2.9"
tar = "0.4.38"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros"] }
toml = "0.5.10"

[build-dependencies]
clap = { version = "4.0.29", features = ["derive"] }
clap_complete = "4.0.6"
clap_complete_nushell = "0.1.8"

[profile.release]
lto = true
strip = true
